kustomize/qbittorent/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  labels:
    app.kubernetes.io/name: qbittorrent
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: qbittorrent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: qbittorrent
    spec:
      containers:
        - name: qbittorrent
          image: "linuxserver/qbittorrent:4.5.2"
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - mountPath: /data/media
              name: media-storage
      volumes:
        - name: media-storage
          persistentVolumeClaim:
            claimName: media-storage
