kustomize/qbittorent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  selector:
    app.kubernetes.io/name: qbittorrent
  ports:
    - protocol: TCP
      port: 80
      targetPort: http
